updates to deploy scripts